finish unit tests